--- a/predictions/templates/predictions/predict.html
+++ b/predictions/templates/predictions/predict.html
@@ -10,15 +10,18 @@
 
 {% block content %}
 <div class="stock-container">
-    <!-- 왼쪽의 주식 예측 입력 폼 -->
+    <!-- 주식 예측 입력 폼 -->
     <div class="form-container">
         <h1>Enter Stock Data for Prediction</h1>
-        <form method="POST" action="{% url 'predict_stock' %}">
+        <form method="POST" action="{% url 'predict_stock' %}" class="relative">
             {% csrf_token %}
             <label for="stock_name">Stock Name:</label>
-            <input type="text" id="stock_name" name="stock_name" onkeyup="filterStocks()" required autocomplete="off">
-            <!-- 자동완성 드롭다운 리스트 -->
-            <ul id="autocomplete-list" class="autocomplete-items" style="display: none;"></ul>
+            <!-- 입력 필드와 드롭다운을 감싸는 div 추가 -->
+            <div class="input-dropdown-container">
+                <input type="text" id="stock_name" name="stock_name" onkeyup="filterStocks()" required autocomplete="off">
+                <!-- 자동완성 드롭다운 리스트 -->
+                <ul id="autocomplete-list" class="autocomplete-items" style="display: none;"></ul>
+            </div>
             <button type="submit" class="btn-submit">Predict</button>
         </form>
 
@@ -56,7 +59,7 @@
             if (stock.toUpperCase().indexOf(filter) > -1) {
                 var li = document.createElement('li');
                 li.classList.add('stock-item');
-                li.textContent = stock;  // 글머리표 없이 텍스트만 추가
+                li.textContent = stock;  // 점을 제거하고 텍스트만 표시
                 li.onclick = function() {
                     fillStockName(stock);
                 };
