주식 예측 기능 홈화면으로 이전

--- a/predictions/templates/predictions/prediction_result.html
+++ b/predictions/templates/predictions/prediction_result.html
@@ -69,7 +69,7 @@
 
     <!-- 뒤로가기 버튼 -->
     <div class="text-center">
-        <a href="{% url 'predict_stock' %}" class="btn">Back to Prediction Form</a>
+        <a href="{% url 'home' %}" class="btn">Back to Prediction Form</a>
     </div>
 </div>
 {% endblock %}
