--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,21 +1,67 @@
 {% extends "base/base.html" %}
-
 {% load static %}
 
 {% block title %}Home{% endblock %}
 
-{% block content %}
+{% block extra_css %}
 <!-- CSS 로드 -->
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
+<link rel="stylesheet" href="{% static 'css/predict.css' %}">
+{% endblock %}
+
+{% block content %}
 <div class="container text-center my-4">
     <h1 class="mb-5">
         <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo-home">
     </h1>
-    <p class="lead mb-4">아래 버튼을 클릭하여 주식 가격 예측을 확인해보세요.<br>해당 프로그램은 최신 데이터를 기반으로 주식 시장 분석을 돕고, 투자 결정을 지원합니다.<br>로그인을 하시면 관심종목을 추가하여 관리할 수 있습니다.</p>
+    <p class="lead mb-4">아래 검색창을 통해 종목을 검색하고 예측을 확인해보세요.<br>해당 프로그램은 최신 데이터를 기반으로 주식 시장 분석을 돕고, 투자 결정을 지원합니다.</p>
 
-    <!-- 버튼 컨테이너 -->
-    <div class="button-container">
-        <a href="{% url 'predict_stock' %}" class="btn btn-primary">종목 예측</a>
+    <!-- 검색 기능 추가 -->
+    <div class="form-container">
+        <form method="POST" action="{% url 'home' %}">
+            {% csrf_token %}
+            <label for="stock_name">Search for Stock:</label>
+            <div class="input-dropdown-container">
+                <input type="text" id="stock_name" name="stock_name" onkeyup="filterStocks()" required autocomplete="off">
+                <ul id="autocomplete-list" class="autocomplete-items" style="display: none;"></ul>
+            </div>
+            <button type="submit" class="btn-submit">Predict</button>
+        </form>
     </div>
 </div>
+
+<!-- 자바스크립트 -->
+<script>
+    function fillStockName(stockName) {
+        document.getElementById('stock_name').value = stockName;
+        document.getElementById('autocomplete-list').style.display = 'none';
+    }
+
+    function filterStocks() {
+        var input = document.getElementById('stock_name');
+        var filter = input.value.toUpperCase();
+        var ul = document.getElementById("autocomplete-list");
+        var stockList = [{% for name in stock_name_list %}"{{ name }}",{% endfor %}];
+
+        ul.innerHTML = '';
+        if (!filter) {
+            ul.style.display = 'none';
+            return;
+        }
+
+        stockList.forEach(function(stock) {
+            if (stock.toUpperCase().indexOf(filter) > -1) {
+                var li = document.createElement('li');
+                li.classList.add('stock-item');
+                li.textContent = stock;
+                li.onclick = function() {
+                    fillStockName(stock);
+                };
+                ul.appendChild(li);
+            }
+        });
+
+        ul.style.display = ul.children.length > 0 ? 'block' : 'none';
+    }
+</script>
 {% endblock %}
