--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container text-center my-4">
+<div class="container-center text-center my-4">
     <h1 class="mb-5">
         <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo-home">
     </h1>
