--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -20,8 +20,8 @@
             padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
-
-            min-height: 400px;
+            align-items: center;      /* 수직 중앙 정렬 */
+            min-height: 500px;
             min-width: 80%; /* 최소 너비: 화면 너비의 80% */
         }
 
