--- a/static/css/add_stock.css
+++ b/static/css/add_stock.css
@@ -30,7 +30,7 @@
     margin-bottom: 15px;
     padding: 10px;
     border-radius: 4px;
-    color: white;
+    color: #007bff;
 }
 
 .alert-success {
