footer에 저작권 관련 명시

--- a/base/templates/base/footer.html
+++ b/base/templates/base/footer.html
@@ -1,12 +1,24 @@
 {% load static %}
 <footer class="footer">
     <div class="container">
-        <p>&copy; 2024 iM Digital Banker Academy. All rights reserved.</p>
+
         <div class="social-links">
-            <a href="https://github.com/0jjuni/stock_predictor" target="_blank">GitHub</a> |
-            <a href="https://www.linkedin.com/in/%EC%98%81%EC%A4%80-%ED%97%88-a247472a9/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/0jjuni/stock_predictor" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/%EC%98%81%EC%A4%80-%ED%97%88-a247472a9/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://blog.naver.com/iyoung1000" target="_blank">
+                <i class="fas fa-bold"></i> <!-- 네이버 블로그 아이콘 대체 -->
+            </a>
+            <a href="mailto:iyoung100009@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+            </a>
         </div>
     </div>
+    <p>&copy; Copyright 2024. 0jjuni all rights reserved.</p>
 </footer>
 
-
+<!-- Font Awesome 추가 -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
